--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h1>Paul Fontaine</h1>
-<p title="Titre">Portfolio</p>
+<h1 title="Titre">Paul Fontaine</h1>
+<p>Portfolio</p>
 
 </body>
 </html>
