--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
  <!DOCTYPE html>
 <html>
+<head>
+  <title>Paul Fontaine</title>
+</head>
 <body>
 
-<h1 title="Titre">Paul Fontaine</h1>
+<h1>Paul Fontaine</h1>
 <p>Portfolio</p>
 
 </body>
