--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
  <!DOCTYPE html>
 <html>
 <head>
-  <title>Paul Fontaine</title>
+<meta charset="utf-8" />
+<link rel="stylesheet" href="style.css" />
+
+<title>Paul Fontaine</title>
 </head>
 <body>
 
