--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
 <title>Paul Fontaine</title>
 </head>
 <body>
-
-<h1>Paul Fontaine</h1>
-<p>Portfolio</p>
+ 
+<div class="sidenav">
+<h1><a href='index.html'>Paul Fontaine</a></h1>
+ <h3>paul.fonfon [arobas] gmail.com</h3>
+ <h2>Cours</h2>
+ <h3><a href='communicationscientifique.html'>Communication scientifique</a></h3>
+</div>
 
 </body>
 </html>
