--- a/communicationscientifique.html
+++ b/communicationscientifique.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8" />
+<link rel="stylesheet" href="style.css" />
 
+<title>Paul Fontaine - Communication scientifique</title>
+</head>
+<body>
+ 
+<div class="sidenav">
+<h1><a href='index.html'>Paul Fontaine</a></h1>
+ <h3>paul.fonfon [arobas] gmail.com</h3>
+<h2>Cours</h2>
+ <h3><a href='communicationscientifique.html'>Communication scientifique</a></h3>
+</div>
+
+</body>
+</html>
