--- a/communicationscientifique.html
+++ b/communicationscientifique.html
@@ -9,10 +9,10 @@
 <body>
  
 <div class="sidenav">
-<h1><a href='index.html'>Paul Fontaine</a></h1>
+<h1><a href="index.html">Paul Fontaine</a></h1>
   <h3>paul.fonfon [arobas] gmail.com</h3>
 <h2>Cours</h2>
-  <h3><a href='communicationscientifique.html'>Communication scientifique</a></h3>
+  <h3><a href="communicationscientifique.html">Communication scientifique</a></h3>
 </div>
 
 </body>
