--- a/cours.html
+++ b/cours.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <link rel="stylesheet" href="style.css" />
 
-<title>Paul Fontaine</title>
+<title>Paul Fontaine - Cours</title>
 </head>
 <body>
  
@@ -13,7 +13,11 @@
   <h3>paul.fonfon [arobas] gmail.com</h3>
 <h2>Portfolio</h2>
   <h3><a href="cours.html">Cours</a></h3>
-</div>
+</div> <!-- sidenav -->
+
+<div class="rectangle">
+<p>Ici viendront les projets scolaires.</p>
+</div> <!-- rectangle -->
 
 </body>
 </html>
